--- a/frontend/public/locales/vi/cart.json
+++ b/frontend/public/locales/vi/cart.json
@@ -53,7 +53,7 @@
       "close": "Đóng"
     },
     "not_found": {
-      "details": "Một số sách trong giỏ hàng của bạn không còn khả dụng:",
+      "details": "Một số sách trong giỏ hàng của bạn không còn khả dụng.",
       "removed_message": "Những sản phẩm này đã được xóa khỏi giỏ hàng của bạn.",
       "close": "Đóng"
     },
